--- a/todaslojas/emporiobelezachic.html
+++ b/todaslojas/emporiobelezachic.html
@@ -8,17 +8,17 @@
 <body>
     <h1>Imagens do Empório Beleza Chic</h1>
 
-    <!-- Corrigindo os caminhos das imagens -->
-    <img src="eihero.github.io-mlsd/todaslojas/emporiorbelezachic/imagem1.jpg" alt="Imagem 1">
-    <img src="eihero.github.io-mlsd/todaslojas/emporiorbelezachic/imagem2.jpg" alt="Imagem 2">
+    <!-- Adicione os nomes das imagens manualmente -->
+    <img src="todaslojas/emporiobelezachic/imagem1.jpg" alt="Imagem 1">
+    <img src="todaslojas/emporiorbelezachic/imagem2.jpg" alt="Imagem 2">
     <!-- ... adicione mais imagens aqui ... -->
 
     <!-- Script de verificação de caminhos -->
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             var paths = [
-                'eihero.github.io-mlsd/todaslojas/emporiorbelezachic/imagem1.jpg',
-                'eihero.github.io-mlsd/todaslojas/emporiorbelezachic/imagem2.jpg',
+                'todaslojas/emporiorbelezachic/imagem1.jpg',
+                'todaslojas/emporiorbelezachic/imagem2.jpg',
                 // Adicione mais caminhos conforme necessário
             ];
 
