--- a/todaslojas/emporiobelezachic.html
+++ b/todaslojas/emporiobelezachic.html
@@ -45,7 +45,7 @@
     const imageContainer = document.getElementById('imageContainer');
 
     // Array com os nomes dos produtos e formato de imagem
-    const productNames = ['ss', '1', 'ss'];
+    const productNames = [imagem1', '1', 'ss'];
     const imageFormat = 'png'; // ou 'jpg', 'jpeg', 'gif', etc.
 
     // Adiciona as imagens dinamicamente ao contêiner
