--- a/todaslojas/emporiobelezachic.html
+++ b/todaslojas/emporiobelezachic.html
@@ -20,7 +20,7 @@
         .retangulo {
             width: 60cm;
             height: 5cm; /* Ajuste a altura conforme necessário */
-            background-color: #90CBFB;
+            background-color: #F14783;
             border: 1px solid #90CBFB;
             text-align: center;
             position: relative;
