--- a/todaslojas/emporiobelezachic.html
+++ b/todaslojas/emporiobelezachic.html
@@ -13,7 +13,7 @@
 
         $openSans: 'Open Sans', Helvetica, Arial, sans-serif;
         body {
-            background: #F14783;
+            background: #90CBFB;
             font-family: $openSans;
         }
 
