--- a/todaslojas/emporiobelezachic.html
+++ b/todaslojas/emporiobelezachic.html
@@ -51,7 +51,7 @@
             left: 0;
             width: 100%;
             height: 0;
-            background-color: #F24682;
+            background-color: #90CBFB;
             transition: height 1s;
             z-index: 0;
         }
