--- a/todaslojas/lojas/ebc/ebc.html
+++ b/todaslojas/lojas/ebc/ebc.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minhas Imagens</title>
-    <link rel="stylesheet" href="caminho/do/seu/estilo.css"> <!-- Adicione o caminho correto do seu arquivo CSS -->
+    <link rel="stylesheet" href="estilo1/style.css"> <!-- Ajuste o nome do arquivo conforme necessário -->
 </head>
 
 <body>
