--- a/todaslojas/lojas/ebc/ebc.html
+++ b/todaslojas/lojas/ebc/ebc.html
@@ -5,15 +5,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minhas Imagens</title>
-    <link rel="stylesheet" href="estilo1/style.css">
+    <link rel="stylesheet" href="estilo1/seuarquivo.css">
     <style>
+        *, *:before, *:after {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+
+        $openSans: 'Open Sans', Helvetica, Arial, sans-serif;
+        body {
+            background: #90CBFB;
+            font-family: $openSans;
+        }
+
+        .retangulo {
+            width: 90%;
+            max-width: 60rem;
+            height: auto;
+            padding: 2rem 1rem;
+            background-color: #F14783;
+            border: 1px solid #90CBFB;
+            text-align: center;
+            position: relative;
+            border-radius: 30px;
+            margin: 50px auto;
+            overflow: hidden;
+        }
+
+        h1 {
+            font-size: 2rem;
+            transition: color 0.5s;
+            pointer-events: none;
+        }
+
+        .retangulo:hover h1 {
+            color: #000;
+        }
+
+        .tinta-rosa {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 0;
+            background-color: #90CBFB;
+            transition: height 1s;
+            z-index: 0;
+        }
+
+        .retangulo:hover .tinta-rosa {
+            height: 100%;
+        }
+
         /* Adicionado estilo para as imagens */
         .imagem-container {
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            height: 60vh;
             overflow: hidden;
+            margin-top: -20px; /* Ajuste a distância negativa conforme necessário */
         }
 
         .imagem-container img {
@@ -21,6 +73,19 @@
             max-height: 100%;
             margin: auto;
             display: block;
+        }
+
+        @media (max-width: 768px) {
+            h1 {
+                font-size: 1.5rem;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .retangulo {
+                width: 95%;
+                border-radius: 20px;
+            }
         }
     </style>
 </head>
