--- a/todaslojas/lojas/ebc/ebc.html
+++ b/todaslojas/lojas/ebc/ebc.html
@@ -24,7 +24,7 @@
             max-width: 60rem;
             height: auto;
             padding: 2rem 1rem;
-            background-color: #F14783;
+            background-color: #FCE1EA;
             border: 1px solid #90CBFB;
             text-align: center;
             position: relative;
