--- a/todaslojas/lojas/ebc/ebc.html
+++ b/todaslojas/lojas/ebc/ebc.html
@@ -13,10 +13,9 @@
             padding: 0;
         }
 
-        $openSans: 'Open Sans', Helvetica, Arial, sans-serif;
         body {
-            background: #90CBFB;
-            font-family: $openSans;
+            background: #FCE1EA; /* Alterei a cor para rosa */
+            font-family: 'Open Sans', Helvetica, Arial, sans-serif;
         }
 
         .retangulo {
