--- a/todaslojas/lojas/ebc/ebc.html
+++ b/todaslojas/lojas/ebc/ebc.html
@@ -23,7 +23,7 @@
             max-width: 60rem;
             height: auto;
             padding: 2rem 1rem;
-            background-color: #FCE1EA;
+            background-color: #e450bb;
             border: 1px solid #90CBFB;
             text-align: center;
             position: relative;
