--- a/todaslojas/lojass.html
+++ b/todaslojas/lojass.html
@@ -62,7 +62,7 @@
         <img src="logos/emporiobelezachic.gif" alt="emporiobelezachic">
         <p>emporiobelezachic</p>
     </div>
-    <div class="item" onclick="openHtml()">
+    <div class="item" onclick="openHtml(lojas/cdm/cdm.html)">
         <img src="logos/cdm.png" alt="cdm">
         <p>cdm2</p>
     </div>
