--- a/todaslojas/lojass.html
+++ b/todaslojas/lojass.html
@@ -80,6 +80,7 @@
 
 <script>
     function openHtml() {
+        window.open('lojas/SCHMITT/schmitt.html', '_blank');
         window.open('lojas/ebc/ebc.html', '_blank');
     }
 
