--- a/todaslojas/lojass.html
+++ b/todaslojas/lojass.html
@@ -58,7 +58,7 @@
 </div>
 
 <div class="container">
-    <div class="item" onclick="openHtml('lojas/SCHMITT/schmitt.html')">
+    <div class="item" onclick="openHtml('lojas/ebc/ebc.html')">
         <img src="logos/emporiobelezachic.gif" alt="emporiobelezachic">
         <p>emporiobelezachic</p>
     </div>
