--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <div class="slideshow">
   <img src="promo/promo1.jpg" alt="promo1">
   <video controls>
-    <source src="promo/video1.mp4" type="video/mp4">
+    <source src="promo/vídeo1.mp4" type="video/mp4">
     Seu navegador não suporta o elemento de vídeo.
   </video>
   <img src="promo/promo2.jpg" alt="promo2">
