--- a/todaslojas/lojass.html
+++ b/todaslojas/lojass.html
@@ -63,7 +63,7 @@
         <p>emporiobelezachic</p>
     </div>
     <div class="item" onclick="openHtml('lojas/SCHMITT/schmitt.html')">
-        <img src="logos/cdm.png" alt="cdm">
+        <img src="logos/sam.png" alt="cdm">
         <p>cdm2</p>
     </div>
     <div class="item" onclick="openHtml('lojas/evc/evc.html')">
