--- a/lojas.html
+++ b/lojas.html
@@ -67,8 +67,8 @@
         <p>emporiobelezachic</p>
     </div>
     <div class="item" onclick="openHtml('cdm')">
-        <img src="\lojas_logos\cdm.png" alt="cdm">
-        <p>cdm2</p>
+        <img src="\lojas_logos\cdm.png" alt="sam">
+        <p>Schmitt Arte em Madeira </p>
     </div>
     <div class="item" onclick="openHtml('evc')">
         <img src="\lojas_logos\evc.png" alt="evc">
