--- a/todaslojas/lojass.html
+++ b/todaslojas/lojass.html
@@ -63,8 +63,8 @@
         <p>emporiobelezachic</p>
     </div>
     <div class="item" onclick="openHtml('lojas/SCHMITT/schmitt.html')">
-        <img src="logos/sam.png" alt="cdm">
-        <p>cdm2</p>
+        <img src="logos/sam.png" alt="sam">
+        <p>Schmitt Arte em Madeira</p>
     </div>
     <div class="item" onclick="openHtml('lojas/evc/evc.html')">
         <img src="logos/evc.png" alt="evc">
