--- a/todaslojas/lojass.html
+++ b/todaslojas/lojass.html
@@ -63,7 +63,7 @@
         <p>emporiobelezachic</p>
     </div>
     <div class="item" onclick="openHtml('lojas/SCHMITT/schmitt.html')">
-        <img src="logos/sam.png" alt="sam">
+        <img src="logos/sam.gif" alt="sam">
         <p>Schmitt Arte em Madeira</p>
     </div>
     <div class="item" onclick="openHtml('lojas/evc/evc.html')">
