--- a/todaslojas/lojas/SCHMITT/schmitt.html
+++ b/todaslojas/lojas/SCHMITT/schmitt.html
@@ -53,18 +53,18 @@
       <div class="row">
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="">
+            <a href="visu/p1/visup.html">
               <div class="img-box">
-                <img src="images/p1.png" alt="">
+               <img src="images/p3.png" alt="">
               </div>
               <div class="detail-box">
                 <h6>
-                  Ring
+                  Teddy Bear
                 </h6>
                 <h6>
                   Price
                   <span>
-                    $200
+                    $110
                   </span>
                 </h6>
               </div>
@@ -74,6 +74,7 @@
                 </span>
               </div>
             </a>
+
           </div>
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
