--- a/todaslojas/lojas/SCHMITT/visu/p1/visup.html
+++ b/todaslojas/lojas/SCHMITT/visu/p1/visup.html
@@ -77,7 +77,7 @@ function imageZoom(imgID, resultID) {
 <h1>Efeito de lupa</h1>
 
 <div class="img-zoom-container">
-  <img id="myimage" src="img_girl.jpg" width="300" height="240">
+  <img id="myimage" src="p1.jpg" width="300" height="240">
   <div id="myresult" class="img-zoom-result"></div>
 </div>
 
