--- a/todaslojas/lojas/SCHMITT/visu/p1/visup.html
+++ b/todaslojas/lojas/SCHMITT/visu/p1/visup.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Carrossel de Imagens com Zoom</title>
 <style>
 .img-zoom-container {
   position: relative;
@@ -10,16 +12,28 @@
 .img-zoom-lens {
   position: absolute;
   border: 1px solid #d4d4d4;
-  width: 40px; /* Você pode ajustar isso conforme necessário */
-  height: 40px; /* Você pode ajustar isso conforme necessário */
+  cursor: zoom-in;
 }
 
 .img-zoom-result {
   border: 1px solid #d4d4d4;
-  /* Ajuste a largura e a altura conforme necessário */
   width: 300px;
   height: 240px;
   overflow: hidden;
+  display: none; /* Inicialmente oculto */
+}
+
+.image-slider {
+  display: flex;
+  overflow-x: auto;
+  gap: 10px;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+.slide img {
+  max-width: 100px; /* Ajuste conforme necessário */
+  cursor: pointer;
 }
 
 .product-info {
@@ -29,12 +43,24 @@
 </head>
 <body>
 
-<h1>Efeito de Lupa em Produtos</h1>
+<div class="image-slider">
+  <div class="slide" onclick="setImage('img3_thumbnail.jpg')">
+    <img src="img1_thumbnail.jpg" alt="Imagem 1">
+  </div>
+  <div class="slide" onclick="setImage('img2.jpg')">
+    <img src="img2_thumbnail.jpg" alt="Imagem 2">
+  </div>
+  <div class="slide" onclick="setImage('img3.jpg')">
+    <img src="img3_thumbnail.jpg" alt="Imagem 3">
+  </div>
+  <!-- Adicione mais slides conforme necessário -->
+</div>
 
 <div class="img-zoom-container">
-  <img id="myimage" src="img_girl.jpg" width="300" height="240" alt="Descrição do Produto">
+  <img id="myimage" src="img1.jpg" width="300" height="240" alt="Descrição do Produto">
   <div id="myresult" class="img-zoom-result"></div>
 </div>
+<button onclick="toggleZoom()">Zoom</button>
 
 <div class="product-info">
   <h2>Nome do Produto</h2>
@@ -42,6 +68,8 @@
 </div>
 
 <script>
+var lensEnabled = false;
+
 function imageZoom(imgID, resultID) {
   var img, lens, result, cx, cy;
   img = document.getElementById(imgID);
@@ -49,6 +77,7 @@ function imageZoom(imgID, resultID) {
   lens = document.createElement("DIV");
   lens.setAttribute("class", "img-zoom-lens");
   img.parentElement.insertBefore(lens, img);
+  lens.style.visibility = "hidden"; // Mantém o lens oculto inicialmente
   cx = result.offsetWidth / lens.offsetWidth;
   cy = result.offsetHeight / lens.offsetHeight;
   result.style.backgroundImage = "url('" + img.src + "')";
@@ -60,6 +89,7 @@ function imageZoom(imgID, resultID) {
   img.addEventListener("touchmove", moveLens);
 
   function moveLens(e) {
+    if (!lensEnabled) return; // Verifica se o zoom está habilitado
     var pos, x, y;
     e.preventDefault();
     pos = getCursorPos(e);
@@ -74,25 +104,41 @@ function imageZoom(imgID, resultID) {
     result.style.backgroundPosition = "-" + (x * cx) + "px -" + (y * cy) + "px";
   }
 
-function getCursorPos(e) {
+  function getCursorPos(e) {
     var a, x = 0, y = 0;
     e = e || window.event;
     a = img.getBoundingClientRect();
-    // Modifica aqui para lidar com eventos de toque
     if (e.type.startsWith('touch')) {
-        // Verifica se é um evento de toque e, se sim, ajusta as coordenadas x e y
-        x = e.touches[0].pageX - a.left - window.pageXOffset;
-        y = e.touches[0].pageY - a.top - window.pageYOffset;
+      x = e.touches[0].clientX - a.left;
+      y = e.touches[0].clientY - a.top;
     } else {
-        // Eventos de mouse são tratados aqui
-        x = e.pageX - a.left - window.pageXOffset;
-        y = e.pageY - a.top - window.pageYOffset;
+      x = e.clientX - a.left;
+      y = e.clientY - a.top;
     }
-    return {x : x, y : y};
+    return {x: x, y: y};
+  }
 }
 
-// Inicialize a função de zoom de imagem quando a página carregar
-imageZoom("myimage", "myresult");
+function toggleZoom() {
+  lensEnabled = !lensEnabled;
+  var lens = document.querySelector(".img-zoom-lens");
+  var result = document.getElementById("myresult");
+  if (lensEnabled) {
+    lens.style.visibility = "visible";
+    result.style.visibility = "visible";
+  } else {
+    lens.style.visibility = "hidden";
+    result.style.visibility = "hidden";
+  }
+}
+
+function setImage(imageSrc) {
+  var img = document.getElementById("myimage");
+  img.src = imageSrc;
+  // Reinicia o zoom para a nova imagem
+  document.querySelector(".img-zoom-lens").remove();// Remove a lente atual
+  imageZoom("myimage", "myresult"); // Inicializa o zoom para a nova imagem
+}
 </script>
 
 </body>
