--- a/todaslojas/lojas/SCHMITT/visu/p1/visup.html
+++ b/todaslojas/lojas/SCHMITT/visu/p1/visup.html
@@ -44,7 +44,7 @@
 <body>
 
 <div class="image-slider">
-  <div class="slide" onclick="setImage('img3_thumbnail.jpg')">
+  <div class="slide" onclick="setImage('img1.jpg')">
     <img src="img1_thumbnail.jpg" alt="Imagem 1">
   </div>
   <div class="slide" onclick="setImage('img2.jpg')">
