--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <button class="button" onclick="openFile('new2.html')">
       <img src="ícones/farmacia.png" alt="New2">
     </button>
-    <button class="button" onclick="openFile('new3.html')">
+    <button class="button" onclick="openFile('motospra/index.html')">
       <img src="ícones/moto.png" alt="New3">
     </button>
   </div>
