--- a/motospra/index.html
+++ b/motospra/index.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Status dos Produtos</title>
-    <link rel="stylesheet" href="styles.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Verificar Existência de Arquivo</title>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-    <h1>Status dos Produtos</h1>
-    <div id="produtos"></div>
 
-    <script src="script.js"></script>
+<p id="resultado"></p>
+
+<script>
+$(document).ready(function(){
+    // URL do arquivo a ser verificado
+    var url = "https://www.pythonanywhere.com/user/einhero/files/home/einhero/4433/on.txt";
+
+    // Fazer solicitação Ajax
+    $.ajax({
+        url: url,
+        type: "HEAD",
+        success: function() {
+            $("#resultado").text("O arquivo existe.");
+        },
+        error: function() {
+            $("#resultado").text("O arquivo não existe.");
+        }
+    });
+});
+</script>
+
 </body>
 </html>
