--- a/motospra/index.html
+++ b/motospra/index.html
@@ -1,33 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Verificar Existência de Arquivo</title>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="0;url=https://einhero.pythonanywhere.com/">
+    <title>Redirecionando...</title>
 </head>
 <body>
-
-<p id="resultado"></p>
-
-<script>
-$(document).ready(function(){
-    // URL do arquivo a ser verificado
-    var url = "https://www.pythonanywhere.com/user/einhero/files/home/einhero/4433/on.txt";
-
-    // Fazer solicitação Ajax
-    $.ajax({
-        url: url,
-        type: "HEAD",
-        success: function() {
-            $("#resultado").text("O arquivo existe.");
-        },
-        error: function() {
-            $("#resultado").text("O arquivo não existe.");
-        }
-    });
-});
-</script>
-
+    <p>Se você não for redirecionado automaticamente, clique <a href="https://einhero.pythonanywhere.com/">aqui</a>.</p>
 </body>
 </html>
