--- a/motospra/index.html
+++ b/motospra/index.html
@@ -1,11 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=https://einhero.pythonanywhere.com/">
-    <title>Redirecionando...</title>
+    <title>Procurando Moto Táxis</title>
+    <style>
+        body, html {
+            height: 100%;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-family: Arial, sans-serif;
+            background-image: url('background.jpg'); /* Usa a imagem do mesmo diretório */
+            background-size: cover; /* Certifica-se de que a imagem de fundo cubra toda a página */
+            background-position: center; /* Centraliza a imagem de fundo */
+        }
+
+        .loading-container {
+            text-align: center;
+            background-color: rgba(255, 255, 255, 0.8); /* Adiciona um fundo branco semi-transparente para melhorar a leitura do texto */
+            padding: 20px;
+            border-radius: 10px;
+        }
+
+        .loading-text {
+            font-size: 24px;
+            margin-bottom: 20px;
+            color: #333; /* Cor do texto */
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+        .loading-spinner {
+            border: 16px solid #f3f3f3;
+            border-top: 16px solid #3498db;
+            border-radius: 50%;
+            width: 120px;
+            height: 120px;
+            animation: spin 2s linear infinite;
+        }
+    </style>
 </head>
 <body>
-    <p>Se você não for redirecionado automaticamente, clique <a href="https://einhero.pythonanywhere.com/">aqui</a>.</p>
+
+<div class="loading-container">
+    <div class="loading-spinner"></div>
+    <div class="loading-text">Estamos procurando os moto táxis disponíveis...</div>
+</div>
+
+<script>
+    // Definir o tempo de espera para o redirecionamento
+    setTimeout(function() {
+        window.location.href = "https://einhero.pythonanywhere.com/";
+    }, 5000); // 5000 milissegundos = 5 segundos
+</script>
+
 </body>
 </html>
