--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 <div class="buttons-container">
   <div class="buttons">
-    <button class="button" onclick="openFile('food.html')">
+    <button class="button" onclick="openFile('comidas/lojass.html')">
       <img src="ícones/comida.png" alt="Comida">
     </button>
     <!-- Botão Lojas ajustado para abrir o arquivo dentro da pasta todaslojas -->
