--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     </button>
   </div>
   <div class="buttons">
-    <button class="button" onclick="openFile('new1.html')">
+    <button class="button" onclick="openFile('contrate/perfisc.html')">
       <img src="ícones/contrate.png" alt="New1">
     </button>
     <button class="button" onclick="openFile('new2.html')">
